2010-03-09  Brady Eidson  <beidson@apple.com>

        Reviewed by Darin Adler.

        Plug-ins don't always respect the cookie accept policy.
        <rdar://problem/7338359> and https://bugs.webkit.org/show_bug.cgi?id=26391

        * http/tests/cookies/resources/cookie-utility.php:
        * http/tests/plugins/resources/third-party-cookie-accept-policy-iframe.html: Added.
        * http/tests/plugins/third-party-cookie-accept-policy.html: Added.

2010-03-09  Andy Estes  <aestes@apple.com>

        Reviewed by Adele Peterson.

        Create a test for https://bugs.webkit.org/show_bug.cgi?id=34700.  This
        test required implementing scroll wheel event dispatch in DRT and
        currently only works on OS X 10.5+.  Skip this test on other platforms
        for the time being.

        * fast/events/remove-child-onscroll-expected.txt: Added.
        * fast/events/remove-child-onscroll.html: Added.
        * platform/gtk/Skipped: Skip remove-child-onscroll.html
        * platform/mac-tiger/Skipped: Skip remove-child-onscroll.html
        * platform/qt/Skipped: Skip remove-child-onscroll.html
        * platform/win/Skipped: Skip remove-child-onscroll.html

2010-03-09  Garret Kelly  <gdk@chromium.org>

        Reviewed by Darin Adler.

        Fix send-oncancel-event. It uses js-test-post, not
        js-test-post-function.
        https://bugs.webkit.org/show_bug.cgi?id=35880

        * fast/events/touch/script-tests/send-oncancel-event.js:
        (touchcancelHandler):

2010-03-09  Simon Fraser  <simon.fraser@apple.com>

        Skip media/video-source-error.html on SnowLeopard, beacuse it fails sporadically.
        This is covered by https://bugs.webkit.org/show_bug.cgi?id=32270.

        * platform/mac-snowleopard/Skipped:

2010-03-09  Chris Fleizach  <cfleizach@apple.com>

        Reviewed by Darin Adler.

        AX: hit testing a list box doesn't work anymore
        https://bugs.webkit.org/show_bug.cgi?id=35893
