@@ -30,8 +30,12 @@ function trySetCookie()
 function completeTest()
 {
    alert("Cookies should still be clear, and are: '" + document.cookie + "'");
-   if (window.layoutTestController)
+   if (window.layoutTestController) {
        layoutTestController.notifyDone();
+       layoutTestController.setAlwaysAcceptCookies(true);
+       clearCookies();
+       layoutTestController.setAlwaysAcceptCookies(false);   
+   }
 }
 
 </script>
