@@ -1,10 +1,14 @@
 <html>
 <head>
+<script src="../cookies/resources/cookies-test-pre.js"></script>    
 <script>
 
 if (window.layoutTestController) {
     layoutTestController.dumpAsText();
     layoutTestController.waitUntilDone();
+    layoutTestController.setAlwaysAcceptCookies(true);
+    clearCookies();
+    layoutTestController.setAlwaysAcceptCookies(false);
 }
 
 </script>
